--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.27.0
 sqlalchemy==2.0.25
 asyncpg==0.29.0
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
 python-multipart==0.0.6
 pydantic==2.5.3
 pydantic-settings==2.1.0
@@ -14,3 +14,4 @@ psycopg2-binary==2.9.9
 alembic==1.13.1
 geopy==2.4.1
 email-validator>=2.0
+bcrypt==3.2.2
